[gd_scene load_steps=8 format=3 uid="uid://cruw6niu5mbrv"]

[ext_resource type="FontFile" uid="uid://cc76tqvboo1gv" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="1_atrl1"]
[ext_resource type="Script" path="res://assets/scripts/menu_scripts/menu.gd" id="1_hyrqt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_huj0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_037pe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebqmy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7taxt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7jna"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_hyrqt")

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.126
anchor_right = 0.037
anchor_bottom = 0.126
offset_left = 0.959999
offset_top = -0.0800018
offset_right = 558.96
offset_bottom = 49.9229
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 53
text = "Forgotten Memories"
justification_flags = 0

[node name="startgame" type="Button" parent="."]
anchors_preset = -1
anchor_left = -0.125
anchor_top = 0.252
anchor_right = -0.125
anchor_bottom = 0.252
offset_top = -0.160004
offset_right = 190.0
offset_bottom = 28.84
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_huj0e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_037pe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7taxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7jna")
text = "Start Game"

[node name="options" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.319
anchor_right = 0.037
anchor_bottom = 0.319
offset_left = -351.04
offset_top = -0.52002
offset_right = -199.04
offset_bottom = 31.48
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_huj0e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_037pe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7taxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7jna")
text = "Settings"

[node name="credits" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.37
anchor_right = 0.033
anchor_bottom = 0.37
offset_left = -399.36
offset_top = 8.39999
offset_right = -250.36
offset_bottom = 45.4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Credits"
flat = true

[node name="quit" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.437
anchor_right = 0.037
anchor_bottom = 0.437
offset_left = -439.04
offset_top = 0.039978
offset_right = -363.04
offset_bottom = 29.04
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_huj0e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_037pe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7taxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7jna")
text = "Quit"

[connection signal="pressed" from="startgame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="startgame" to="startgame" method="_on_pressed"]
[connection signal="pressed" from="options" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
